first attempt at new covariance templates
