# nodejs-server/controllers/CovarExperimental.js
@@ -13,6 +13,26 @@ module.exports.findCovar = function findCovar (req, res, next, lat, lon, forcast
     });
 };
 
+module.exports.findCovarMeta = function findCovarMeta (req, res, next, id) {
+  CovarExperimental.findCovarMeta(id)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.findTC = function findTC (req, res, next, id, polygon, multipolygon, center, radius, forecastGeolocation, metadata, compression, data) {
+  CovarExperimental.findTC(id, polygon, multipolygon, center, radius, forecastGeolocation, metadata, compression, data)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
 module.exports.sumCovar = function sumCovar (req, res, next, lat, lon, forcastDays, polygon) {
   CovarExperimental.sumCovar(lat, lon, forcastDays, polygon)
     .then(function (response) {
